mass_configure_alarm.sh: Option parsing and config file reading.

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 
-mass_upgrade.sh
-===============
+ips-tools/mass_upgrade.sh
+=========================
 
 Antoine Zen-Ruffinen <antoine@riedonetworks.com>
 20.02.2018
